--- a/src/app/clientes/clientes.component.html
+++ b/src/app/clientes/clientes.component.html
@@ -2,11 +2,15 @@
   <div class="card-header">Clientes</div>
   <div class="card-body text-primary">
     <h5 class="card-title">Lista Clientes</h5>
+
     <div class ="my-2 text-left">
       <button class="btn btn-rounded btn-primary" type="button" [routerLink] = "['/clientes/form']">Crear</button>
     </div>
+    <div *ngIf="clientes?.length == 0" class="alert alert-info">
+      No hay registros en la base de datos
+    </div>
 
-    <table class =" table table-table-bordered table-striped">
+    <table class =" table table-table-bordered table-striped " *ngIf="clientes?.length>0">
       <thead>
         <tr>
           <th>id</th>
@@ -14,6 +18,10 @@
           <th>apellido</th>
           <th>email</th>
           <th>fecha</th>
+          <th>
+            Editar
+          </th>
+          <th>Eliminar</th>
         </tr>
       </thead>
       <tbody>
@@ -23,6 +31,12 @@
           <td>{{cliente.apellido}}</td>
           <td>{{cliente.email}}</td>
           <td>{{cliente.createAt}}</td>
+          <td>
+            <button type="button" name="editar" [routerLink]="['/clientes/form', cliente.id]" class="btn btn-primary">Editar</button>
+          </td>
+          <td>
+            <button type="button" name="eliminar" (click)="delete(cliente)" class="btn btn-danger">Eliminar</button>
+          </td>
         </tr>
       </tbody>
     </table>
