--- a/src/app/clientes/clientes.component.html
+++ b/src/app/clientes/clientes.component.html
@@ -4,7 +4,7 @@
     <h5 class="card-title">Lista Clientes</h5>
 
     <div class ="my-2 text-left">
-      <button class="btn btn-rounded btn-primary" type="button" [routerLink] = "['/clientes/form']">Crear</button>
+      <button class="btn btn-rounded btn-primary" type="button" [routerLink] = "['/clientes/form']">Crear Cliente</button>
     </div>
     <div *ngIf="clientes?.length == 0" class="alert alert-info">
       No hay registros en la base de datos
