--- a/src/app/clientes/form.component.html
+++ b/src/app/clientes/form.component.html
@@ -1,10 +1,11 @@
 
-<!-- Para validar los datos desde el buckend borrar lo comentado en los imput-->
+<!-- Para validar los datos desde el buckend borrar lo comentado en los imput
 <ul class="alert alert-danger" *ngIf="errores?.length > 0">
   <li *ngFor="let err of errores">
     {{ err }}
   </li>
 </ul>
+-->
 
 <div class="card bg-dark text-white">
   <div class="card-header">{{ titulo }}</div>
