--- a/src/app/clientes/form.component.html
+++ b/src/app/clientes/form.component.html
@@ -58,6 +58,17 @@
         </div>
       </div>
 
+      <div class="form-groups row">
+        <label for="createAt" class="col-form-label col-sm-2">Fecha</label>
+        <div class="col-sm-6">
+          <!-- required minlength="4"-->
+          <input  [matDatepicker]="picker" class="form-Control" [(ngModel)]="cliente.createAt" name="createAt"  >
+          <mat-datepicker-toggle  [for]="picker"></mat-datepicker-toggle>
+          <mat-datepicker #picker></mat-datepicker>
+
+        </div>
+      </div>
+
       <div class="form-group row">
         <div class="col-sm-6">
           <button class="btn btn-primary" role="button" (click)='create()' *ngIf="!cliente.id else elseBlock" [disabled]="!clienteForm.form.valid">Crear Cliente</button>
